replacing the deprecated function treeHeight(T)

--- a/tutorial_TeX/RB_SimpleDiversification_Tutorial/RB_SimpleDiversification_Tutorial_content.tex
+++ b/tutorial_TeX/RB_SimpleDiversification_Tutorial/RB_SimpleDiversification_Tutorial_content.tex
@@ -152,7 +152,7 @@ We can get the value for the root from the \citet{dosReis2012} tree.
 
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-root_time <- treeHeight(T)
+root_time <- T.rootAge()
 \end{lstlisting}
 \end{snugshade*}}
 
@@ -402,7 +402,7 @@ Get the value for the root from the \citet{dosReis2012} tree.
 
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-root_time <- treeHeight(T)
+root_time <- T.rootAge()
 \end{lstlisting}
 \end{snugshade*}}
 
