Minor edits before the LSU workshop

--- a/tutorial_TeX/RB_BayesFactor_Tutorial/RB_BayesFactor_Tutorial.tex
+++ b/tutorial_TeX/RB_BayesFactor_Tutorial/RB_BayesFactor_Tutorial.tex
@@ -13,7 +13,7 @@
 \textbf{\LARGE Phylogenetic Inference using \RevBayes}\\\vspace{2mm}
 \textbf{\it{\Large Model selection using Bayes factors}}\\\vspace{2mm}
 \vspace{1cm}
-{\Large Sebastian H{\"o}hna}
+{\Large Sebastian H{\"o}hna, Michael J Landis, Tracy A Heath and Brian R Moore}
 \vspace{1cm}
 \end{center}
 
