building tutorial and manual pdf's

--- a/tutorial_TeX/RB_Biogeography_DEC_Tutorial/RB_Biogeography_DEC_Tutorial_content.tex
+++ b/tutorial_TeX/RB_Biogeography_DEC_Tutorial/RB_Biogeography_DEC_Tutorial_content.tex
@@ -294,8 +294,7 @@ Finally, normalize {\tt er\_nat} using a simplex, then pass the resulting exchan
 \begin{snugshade}
 \begin{lstlisting}
 er := simplex(er_nat)
-bf <- simplex(rep(1,n_states))
-q := fnFreeK(er, bf)
+q := fnFreeK(er)
 \end{lstlisting}
 \end{snugshade}
 
