Updating species tree tutorials

--- a/tutorial_TeX/RB_Manual.tex
+++ b/tutorial_TeX/RB_Manual.tex
@@ -124,6 +124,15 @@ John P. Huelsenbeck
 
 
 \part{Gene tree - Species tree estimation}
+
+\chapter{Overview}
+\def \ResourcePath {RB_GTST_Tutorial/}
+\include{RB_GTST_Tutorial/RB_GTST_Tutorial_content}
+
+\chapter{Estimating species tree using gene concatenation}
+\def \ResourcePath {RB_GeneConcatenation_Tutorial/}
+\include{RB_GeneConcatenation_Tutorial/RB_GeneConcatenation_Tutorial_content}
+
 \chapter{Multispecies Coalescent}
 \def \ResourcePath {RB_MultispeciesCoalescent_Tutorial/}
 \include{RB_MultispeciesCoalescent_Tutorial/RB_MultispeciesCoalescent_Tutorial_content}
