--- a/tutorial_TeX/RB_GTST_Tutorial/RB_GTST_Tutorial.tex
+++ b/tutorial_TeX/RB_GTST_Tutorial/RB_GTST_Tutorial.tex
@@ -5,13 +5,13 @@
 \renewcommand{\headrulewidth}{0.5pt}
 \headsep = 20pt
 \lhead{ }
-\rhead{\textsc {\RevBayes~Tutorial --- Gene tree-species tree reconstruction}}
+\rhead{\textsc {\RevBayes~Tutorial --- Gene tree-species tree reconstruction using the multispecies coalescent}}
 
 \thispagestyle{plain}
 \begin{center}
 
 \textbf{\LARGE Phylogenetic Inference using \RevBayes}\\\vspace{2mm}
-\textbf{\it{\Large Gene tree-species tree reconstruction}}\\\vspace{2mm}
+\textbf{\it{\Large Gene tree-species tree reconstruction using the multispecies coalescent}}\\\vspace{2mm}
 \vspace{1cm}
 {\Large Bastien Boussau and Sebastian H{\"o}hna}
 \vspace{1cm}
@@ -19,7 +19,7 @@
 
 \def \ResourcePath {./}
 \def \GlobalResourcePath {../}
-\input{RB_GTST_Tutorial_content}
+\input{RB_MultispeciesCoalescent_Tutorial_content}
 
 Version dated: \today
 
