updating species tutorials

--- a/tutorial_TeX/RB_MultispeciesCoalescent_Tutorial/RB_MultispeciesCoalescent_Tutorial.tex
+++ b/tutorial_TeX/RB_MultispeciesCoalescent_Tutorial/RB_MultispeciesCoalescent_Tutorial.tex
@@ -19,6 +19,7 @@
 
 \def \ResourcePath {./}
 \def \GlobalResourcePath {../}
+\input{../RB_GTST_Tutorial/RB_GTST_Tutorial_content_no_bib}
 \input{RB_MultispeciesCoalescent_Tutorial_content}
 
 Version dated: \today
