--- a/tutorial_TeX/RB_GTST_Tutorial/refs.bib
+++ b/tutorial_TeX/RB_GTST_Tutorial/refs.bib
@@ -3061,6 +3061,7 @@ author = {Boussau, B},
 file = {:Users/boussau/Library/Application Support/Mendeley Desktop/Downloaded/Boussau - 2009 - Phylogenetic Relationships Deduced from Whole Genome Comparisons.pdf:pdf},
 title = {{Phylogenetic Relationships Deduced from Whole Genome Comparisons}},
 url = {papers2://publication/uuid/F912D062-6E48-4B88-A501-7338FA2FF9FA papers://c574a988-041f-48f0-a387-1407660e65a3/Paper/p1554},
+journal = {Encyclopaedia of Life Sciences},
 year = {2009}
 }
 @article{Boussau2008,
