Cleaning up tutorial tex

--- a/tutorial_TeX/RB_CTMC_Tutorial/RB_CTMC_Tutorial_content.tex
+++ b/tutorial_TeX/RB_CTMC_Tutorial/RB_CTMC_Tutorial_content.tex
@@ -407,7 +407,7 @@ When the analysis is complete, you will have the monitored files in your output 
 
 
 Methods for visualizing the marginal densities of parameter values are not currently available in \RevBayes itself. 
-Thus, it is important to use programs like \texttt{Tracer} \citep{Rambaut2011} to evaluate mixing and non-convergence. (\RevBayes does, however, have a tool for convergence assessment called \cl{beca}.)
+Thus, it is important to use programs like \Tracer \citep{Rambaut2011} to evaluate mixing and non-convergence. (\RevBayes does, however, have a tool for convergence assessment called \cl{beca}.)
 
 \noindent \\ \impmark Look at the file called \cl{output/primates\_cytb\_JC\_posterior.log} in \texttt{Tracer}.
 
