--- a/tutorial_TeX/RB_Manual.tex
+++ b/tutorial_TeX/RB_Manual.tex
@@ -115,9 +115,22 @@ John P. Huelsenbeck
 
 
 \part{Diversification Rate Estimation}
-\chapter{Simple Diversification Rate Estimation}
-\def \ResourcePath {RB_SimpleDiversification_Tutorial/}
-\include{RB_SimpleDiversification_Tutorial/RB_SimpleDiversification_Tutorial_content}
+
+\chapter{Overview}
+\def \ResourcePath {RB_DiversificationRateIntro_Tutorial/}
+\include{RB_DiversificationRateIntro_Tutorial/RB_DiversificationRateIntro_Tutorial_content}
+
+%\chapter{Estimating species tree using gene concatenation}
+%\def \ResourcePath {RB_GeneConcatenation_Tutorial/}
+%\include{RB_GeneConcatenation_Tutorial/RB_GeneConcatenation_Tutorial_content}
+
+\chapter{Basic Diversification Rate Estimation}
+\def \ResourcePath {RB_DiversificationRate_Tutorial/}
+\include{RB_DiversificationRate_Tutorial/RB_DiversificationRate_Tutorial_content}
+
+\chapter{Episodic Diversification Rate Estimation}
+\def \ResourcePath {RB_DiversificationRateEpisodic_Tutorial/}
+\include{RB_DiversificationRateEpisodic_Tutorial/RB_DiversificationRateEpisodic_Tutorial_content}
 
 
 
