--- a/tutorial_TeX/preamble.tex
+++ b/tutorial_TeX/preamble.tex
@@ -131,6 +131,7 @@
 \newcommand{\PAML}{\texttt{PAML}\xspace}
 \newcommand{\Phylowood}{\texttt{Phylowood}\xspace}
 \newcommand{\Tracer}{\texttt{Tracer}\xspace}
+\newcommand{\BAMM}{\texttt{BAMM}\xspace}
 
 
 \let\otheriint\iint
@@ -154,7 +155,9 @@
   showstringspaces=false
 }
 
-\definecolor{shadecolor}{RGB}{238,224,229}
+%\definecolor{shadecolor}{RGB}{238,224,229}
+%\definecolor{shadecolor}{RGB}{135,206,250}
+\definecolor{shadecolor}{RGB}{183,207,237}
 
 \setlength{\tabcolsep}{5pt}
 \setlength{\topmargin}{-0.4in}
